<resources>
    <string name="app_name">Quiz</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="quiz">QUIZ</string>
    <string name="join_now">Join Now</string>
    <string name="have_login">Have an account? Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <!--ID of Facebook App Quiz-->
    <string name="facebook_app_id">149741648758802</string>

    <string-array name="info_about_game">
        <item>The most famous game</item>
        <item>Connect with people who share you interests</item>
        <item>Show achievement for your friends</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="user_email_com">user@email.com</string>
    <string name="log_out">Log out</string>
</resources>
