<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/_170sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:text="@string/email"
        android:textSize="@dimen/_18sdp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/_120sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:text="@string/password"
        android:textSize="@dimen/_18sdp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/_70sdp"
        android:layout_marginLeft="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_22sdp"
        android:background="@color/purple"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/_28sdp"
        android:text="@string/have_login"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sdp" />

</FrameLayout>