<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headpiece"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.view.activity.SplashActivity">

    <ImageView
        android:id="@+id/iv_start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_4sdp"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:src="@drawable/start" />

    <TextView
        android:id="@+id/tv_welcome_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp" />

    <TextView
        android:id="@+id/tv_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/quiz"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold" />
</LinearLayout>
